--- a/ScheduleAlarmApp/android.yml
+++ b/ScheduleAlarmApp/android.yml
@@ -1,14 +1,9 @@
 name: Android APK
-
-on:
-  push:
-    branches: [ main, master ]
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
